# UVTD

./: .gitignore  CMakeLists.txt  CMakeLists_backup.txt
external_deps/DIA_SDK/include/: dia2.h
external_deps/DIA_SDK/lib/: diaguids.lib
external_deps/DIA_SDK/lib/amd64/: diaguids.lib
external_deps/DIA_SDK/lib/arm/: diaguids.lib
external_deps/DIA_SDK/lib/arm64/: diaguids.lib
include/UVTD/: UVTD.hpp
run/: TypesToDump.txt
src/: TypeLayoutGenerator.cpp  UVTD_DIA.cpp  UVTD_DbgHelp.cpp  main.cpp
